# python-project-52

./: Makefile  README.md  db.sqlite3  pyproject.toml  test.sqlite3
locale/: messages_ru
locale/en/LC_MESSAGES/: django.mo  django.po
locale/lv/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  views.py
task_manager/templates/: base.html  index.html  login.html  user_delete.html  user_edit.html  users_list.html
tests/: test_create_user.py  test_delete_user.py  test_update_user.py
