[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Aigars Sinevics <aigarzs@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
flake8 = "^7.1.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
